[package]
name = "ralik-repl"
version = "0.0.1-alpha.0"
authors = ["Daniel Schemmel <daniel@schemmel.net>"]
edition = "2018"
publish = ["crates-io"]
repository = "https://github.com/danielschemmel/ralik/"
description = "The Rust ALIKe Read-Eval-Print-Loop"
readme = "../README.md"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1"
atty = "0.2"
build-info = { version = "0.0.21", features = ["serde"] }
ctrlc = "3"
rustyline = "7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
toml = "0.5"

ralik = { version = "0.0.1-alpha.0", path = "../ralik", features = ["serde"] }

[dev-dependencies]
pretty_assertions = "0.6"

[build-dependencies]
build-info-build = "0.0.21"
