[package]
name = "ralik"
version = "0.0.1-alpha.0"
authors = ["Daniel Schemmel <daniel@schemmel.net>"]
edition = "2018"
publish = ["crates-io"]
repository = "https://github.com/danielschemmel/ralik/"
description = "The Rust ALIKe language"
readme = "../README.md"
license = "MIT OR Apache-2.0"


[dependencies]
anyhow = "1"
lazy_static = "1"
num = "0.3"
pretty_assertions = "0.6"
proc-macro2 = { version = "1", features = ["span-locations"] }
quote = "1"
syn = "1"
thiserror = "1"

my_serde = { package = "serde", version = "1", default_features = false, optional = true }

[features]
default = []
serde = ["my_serde", "num/serde"]
